# lulzcasz-dev

./: .dockerignore  .env  .gitignore  Dockerfile  Justfile  LICENSE  compose.yaml  garage.toml  justfile  package-lock.json  package.json  pyproject.toml  renovate.json  vite.config.js
about/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
about/migrations/: 0001_initial.py
about/tasks/: image.py
blog/: admin.py  context_processors.py  models.py  signals.py  sitemaps.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_post_technologies.py  0003_alter_post_cover.py  0004_alter_category_options_alter_genre_options_and_more.py  0005_remove_post_products_postproduct.py  0006_post_products.py  0007_remove_post_products_delete_postproduct.py  0008_post_products.py  0009_remove_post_products.py
blog/tasks/: image.py
blog/templatetags/: image_utils.py  product_shortcodes.py
common/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
common/migrations/: 0001_initial.py  0002_delete_technology.py
common/tasks/: image.py  video.py
common/templatetags/: image_utils.py
common/utils/: image.py  paginate.py  upload_to.py
lulzcasz_dev/: celery.py  urls.py
lulzcasz_dev/settings/: base.py  development.py  production.py
portfolio/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_technology_alter_project_technologies.py  0003_alter_project_cover.py  (+1 more)
products/: admin.py  apps.py  models.py  signals.py
templates/: base.html  robots.txt
(+39 files in other folders)
