[project]
name = "lulzcasz-dev"
version = "0.0.0"
description = "lulzcasz.dev source code"
readme = "README.md"
requires-python = "==3.14.6"
dependencies = [
    "celery==5.6.3",
    "django==5.2.14",
    "django-htmx==1.27.0",
    "django-storages[s3]==1.14.6",
    "django-taggit==6.1.0",
    "django-tailwind-cli==4.6.2",
    "django-tinymce==5.0.0",
    "gunicorn==26.0.0",
    "pillow==12.2.0",
    "psycopg[binary]==3.3.4",
    "redis==8.0.0",
    "whitenoise[brotli]==6.12.0",
]

[uv.tool]
package = false

[dependency-groups]
dev = [
    "ipython==9.14.0",
    "psycopg[binary]==3.3.4",
    "rust-just==1.51.0",
]
